--- a/recipe-finder/src/index.css
+++ b/recipe-finder/src/index.css
@@ -1,6 +1,10 @@
 @import "tailwindcss";
 
-/* small custom styles */
 body {
-  @apply bg-gray-50 text-gray-900;
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
